--- a/Clock/App.config
+++ b/Clock/App.config
@@ -1,6 +1,42 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+    <configSections>
+        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="Clock.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+        </sectionGroup>
+    </configSections>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
     </startup>
+<userSettings>
+        <Clock.Properties.Settings>
+                <setting name="Topmost" serializeAs="String">
+                        <value>False</value>
+                </setting>
+                <setting name="ShowDate" serializeAs="String">
+                        <value>False</value>
+                </setting>
+                <setting name="ShowWeekday" serializeAs="String">
+                        <value>False</value>
+                </setting>
+                <setting name="ShowControls" serializeAs="String">
+                        <value>False</value>
+                </setting>
+                <setting name="RunOnStartup" serializeAs="String">
+                        <value>False</value>
+                </setting>
+                <setting name="WindowLocation" serializeAs="String">
+                        <value>0, 0</value>
+                </setting>
+                <setting name="CustomFont" serializeAs="String">
+                        <value>Microsoft Sans Serif, 8.25pt</value>
+                </setting>
+                <setting name="ForeColor" serializeAs="String">
+                        <value>Black</value>
+                </setting>
+                <setting name="BackColor" serializeAs="String">
+                        <value>Transparent</value>
+                </setting>
+        </Clock.Properties.Settings>
+    </userSettings>
 </configuration>
