--- a/Clock/Clock.csproj
+++ b/Clock/Clock.csproj
@@ -50,6 +50,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AddAlarmForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="AddAlarmForm.Designer.cs">
+      <DependentUpon>AddAlarmForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Alarm.cs" />
     <Compile Include="ChooseFont.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -64,6 +71,9 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="AddAlarmForm.resx">
+      <DependentUpon>AddAlarmForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="ChooseFont.resx">
       <DependentUpon>ChooseFont.cs</DependentUpon>
     </EmbeddedResource>
